--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8576484060734232"
-        crossorigin="anonymous"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8576484060734232"
+        crossorigin="anonymous"></script> -->
+    <meta name="monetag" content="7691336d3efe2cee89791f306155910d">
 </head>
 
 <body>
