--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8576484060734232"
         crossorigin="anonymous"></script> -->
     <meta name="monetag" content="7691336d3efe2cee89791f306155910d">
+    <script src="https://quge5.com/88/tag.min.js" data-zone="200455" async data-cfasync="false"></script>
 </head>
 
 <body>
