--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Generate strong, secure passwords instantly with SecurePass. Free online password generator with customizable options, strength analysis, and security tips.">
+    <meta name="description" content="Free secure password generator online. Create strong, random passwords with custom length, numbers, symbols, uppercase, and lowercase letters.">
     <meta name="keywords"
         content="password generator, secure password, random password, strong password, password security">
     <title>SecurePass | Free Secure Password Generator</title>
@@ -18,6 +17,7 @@
     <!-- Google AdSense -->
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8576484060734232"
         crossorigin="anonymous"></script> -->
+    
     <meta name="monetag" content="7691336d3efe2cee89791f306155910d">
     <script src="https://quge5.com/88/tag.min.js" data-zone="200455" async data-cfasync="false"></script>
 </head>
